# qonjug

./: .cproject  .project  README.md  conjugation_fr.db  wscript
cmake/: CMakeLists.txt  FindBuildFunctions.cmake  FindSqlite3.cmake
debian/: README.Debian  README.source  control  copyright  rules
share/: conjugation_fr.db
src/: Clonable.h  Comparable.h  VerbAnalyzer.cpp  VerbAnalyzer.h  VerbExceptionStorage.cpp  VerbExceptionStorage.h  VerbFactory.cpp  VerbFactory.h  fwd_decls.h  main.cpp
src/backend/: ConjugationBackend.cpp  ConjugationBackend.h  SQLiteBackend.cpp  SQLiteBackend.h  SQLiteConjugationBackend.cpp  SQLiteConjugationBackend.h  VerbAccessBackend.cpp  VerbAccessBackend.h
src/backend/french/: FrenchSQLiteBackend.cpp  FrenchSQLiteBackend.h
src/conjugation/: Conjugation.cpp  Conjugation.h  ConjugationElementFactory.cpp  ConjugationElementFactory.h  Genre.cpp  Genre.h  Mode.cpp  Mode.h  Number.cpp  Number.h  Person.cpp  Person.h  Tense.cpp  Tense.h  Verb.cpp  Verb.h
src/conjugation/french/: FrenchMode.cpp  FrenchMode.h  FrenchPerson.cpp  FrenchPerson.h  FrenchTense.cpp  FrenchTense.h  FrenchVerb.cpp  FrenchVerb.h  FrenchVerbGroup.cpp  FrenchVerbGroup.h
src/rendering/: ConsoleRenderer.cpp  ConsoleRenderer.h  FrenchConsoleRenderer.cpp  FrenchConsoleRenderer.h  Renderable.h  Renderer.h
